WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315254
[Flex] Stretch-fit width with aspect-ratio should not provide definite cross size to flex items
https://bugs.webkit.org/show_bug.cgi?id=315254
Summary
[Flex] Stretch-fit width with aspect-ratio should not provide definite cross ...
alan
Reported
2026-05-20 19:37:23 PDT
ssia
Attachments
[fast-cq]Patch
(8.47 KB, patch)
2026-05-20 19:42 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-20 19:42:16 PDT
Created
attachment 479748
[details]
[fast-cq]Patch
EWS
Comment 2
2026-05-22 05:11:23 PDT
Committed
313723@main
(dcd4b73b90f7): <
https://commits.webkit.org/313723@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479748
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-05-22 05:12:12 PDT
<
rdar://problem/177705930
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug